--- a/TranslationReg/TranslationReg.csproj
+++ b/TranslationReg/TranslationReg.csproj
@@ -378,7 +378,7 @@
     <Content Include="Views\ProjectStatuse\List.cshtml" />
     <Content Include="Views\Analytics\Filters.cshtml" />
     <Content Include="Views\Analytics\Report.cshtml" />
-    <Content Include="Views\Projects\Card.cshtml" />
+    <Content Include="Views\Projects\Cards.cshtml" />
     <Content Include="Views\Languages\EditCard.cshtml" />
     <Content Include="Views\Languages\Cards.cshtml" />
     <Content Include="Views\Languages\Card.cshtml" />
@@ -393,6 +393,9 @@
     <Content Include="Views\WorkTypes\EditCard.cshtml" />
     <Content Include="Views\ProjectStatuse\AddCard.cshtml" />
     <Content Include="Views\ProjectStatuse\EditCard.cshtml" />
+    <Content Include="Views\UnitOfMeasure\AddCard.cshtml" />
+    <Content Include="Views\UnitOfMeasure\Card.cshtml" />
+    <Content Include="Views\UnitOfMeasure\EditCard.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
