Odd views, scripts are deleted. scripts and some styles are placed in specific directories

--- a/TranslationReg/TranslationReg.csproj
+++ b/TranslationReg/TranslationReg.csproj
@@ -225,41 +225,41 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\bootstrap\bootstrap.js" />
+    <Content Include="Scripts\bootstrap\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="package-lock.json" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
-    <None Include="Scripts\jquery-1.12.4.intellisense.js" />
-    <Content Include="Scripts\jquery-1.12.4.js" />
-    <Content Include="Scripts\jquery-1.12.4.min.js" />
-    <Content Include="Scripts\jquery-1.12.4.min.map" />
-    <None Include="Scripts\jquery.validate-vsdoc.js" />
-    <Content Include="Scripts\jquery-ui-1.12.1.js" />
-    <Content Include="Scripts\jquery-ui-1.12.1.min.js" />
-    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
-    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
-    <Content Include="Scripts\jquery.validate.js" />
-    <Content Include="Scripts\jquery.validate.min.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Scripts\respond.js" />
-    <Content Include="Scripts\respond.min.js" />
+    <None Include="Scripts\jquery\jquery-1.12.4.intellisense.js" />
+    <Content Include="Scripts\jquery\jquery-1.12.4.js" />
+    <Content Include="Scripts\jquery\jquery-1.12.4.min.js" />
+    <Content Include="Scripts\jquery\jquery-1.12.4.min.map" />
+    <None Include="Scripts\jquery\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery\jquery-ui-1.12.1.js" />
+    <Content Include="Scripts\jquery\jquery-ui-1.12.1.min.js" />
+    <Content Include="Scripts\jquery\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery\jquery.unobtrusive-ajax.min.js" />
+    <Content Include="Scripts\jquery\jquery.validate.js" />
+    <Content Include="Scripts\jquery\jquery.validate.min.js" />
+    <Content Include="Scripts\jquery\jquery.validate.unobtrusive.js" />
+    <Content Include="Scripts\jquery\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\modernizr\modernizr-2.6.2.js" />
+    <Content Include="Scripts\bootstrap\respond.js" />
+    <Content Include="Scripts\bootstrap\respond.min.js" />
     <Content Include="Scripts\scripts.js" />
-    <Content Include="Style\addCard.css" />
+    <Content Include="Style\cards\addCard.css" />
     <Content Include="Style\bootstrap-theme.css" />
     <Content Include="Style\bootstrap-theme.min.css" />
     <Content Include="Style\bootstrap.css" />
     <Content Include="Style\bootstrap.min.css" />
-    <Content Include="Style\card.css" />
+    <Content Include="Style\cards\card.css" />
     <Content Include="Style\images\logo_tpu.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Style\Site.css" />
-    <Content Include="Style\deleteModal.css" />
+    <Content Include="Style\modal\deleteModal.css" />
     <Content Include="Style\style.css" />
     <Content Include="Style\themes\base\accordion.css" />
     <Content Include="Style\themes\base\all.css" />
@@ -320,30 +320,20 @@
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Languages\Create.cshtml" />
     <Content Include="Views\Languages\Delete.cshtml" />
-    <Content Include="Views\Languages\Edit.cshtml" />
-    <Content Include="Views\Languages\Index.cshtml" />
     <Content Include="Views\Documents\Create.cshtml" />
     <Content Include="Views\Documents\Delete.cshtml" />
-    <Content Include="Views\Documents\Details.cshtml" />
     <Content Include="Views\Documents\Edit.cshtml" />
     <Content Include="Views\Documents\Index.cshtml" />
     <Content Include="Views\Projects\Create.cshtml" />
     <Content Include="Views\Projects\Delete.cshtml" />
-    <Content Include="Views\Projects\Details.cshtml" />
     <Content Include="Views\Projects\Edit.cshtml" />
     <Content Include="Views\Projects\Index.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
-    <Content Include="Views\LanguagePairs\Create.cshtml" />
-    <Content Include="Views\LanguagePairs\Edit.cshtml" />
-    <Content Include="Views\LanguagePairs\List.cshtml" />
-    <Content Include="Views\Languages\List.cshtml" />
     <Content Include="Views\LanguagePairs\Delete.cshtml" />
     <Content Include="Views\Projects\DetailsShort.cshtml" />
     <Content Include="Views\DocStages\Create.cshtml" />
     <Content Include="Views\DocStages\Delete.cshtml" />
-    <Content Include="Views\DocStages\Edit.cshtml" />
     <Content Include="Views\DocStages\Item.cshtml" />
     <Content Include="Views\User_Stage\Create.cshtml" />
     <Content Include="Views\User_Stage\Delete.cshtml" />
@@ -352,33 +342,22 @@
     <Content Include="Views\User_Stage\List.cshtml" />
     <Content Include="Views\Projects\TabPages.cshtml" />
     <Content Include="Views\Projects\Documents.cshtml" />
-    <Content Include="Views\Documents\Item.cshtml" />
     <Content Include="Views\Documents\DocAndStages.cshtml" />
-    <Content Include="Views\UnitOfMeasure\Create.cshtml" />
     <Content Include="Views\UnitOfMeasure\Delete.cshtml" />
-    <Content Include="Views\UnitOfMeasure\Edit.cshtml" />
-    <Content Include="Views\WorkTypes\Create.cshtml" />
     <Content Include="Views\WorkTypes\Delete.cshtml" />
-    <Content Include="Views\WorkTypes\Edit.cshtml" />
     <Content Include="Views\WorkTypes\Index.cshtml" />
     <Content Include="Style\bootstrap-theme.css.map" />
     <Content Include="Style\bootstrap-theme.min.css.map" />
     <Content Include="Style\bootstrap.css.map" />
     <Content Include="Style\bootstrap.min.css.map" />
     <Content Include="Style\style.less" />
-    <Content Include="Views\WorkTypes\List.cshtml" />
-    <Content Include="Views\UnitOfMeasure\List.cshtml" />
     <Content Include="Views\Projects\List.cshtml" />
     <Content Include="Views\Documents\List.cshtml" />
     <Content Include="Views\DocStages\List.cshtml" />
     <Content Include="Views\Documents\CreateProjectDoc.cshtml" />
-    <Content Include="Views\ProjectStatuse\Create.cshtml" />
     <Content Include="Views\ProjectStatuse\Delete.cshtml" />
-    <Content Include="Views\ProjectStatuse\Edit.cshtml" />
-    <Content Include="Views\ProjectStatuse\List.cshtml" />
     <Content Include="Views\Analytics\Filters.cshtml" />
     <Content Include="Views\Analytics\Report.cshtml" />
-    <Content Include="Views\Projects\Cards.cshtml" />
     <Content Include="Views\Languages\EditCard.cshtml" />
     <Content Include="Views\Languages\Cards.cshtml" />
     <Content Include="Views\Languages\Card.cshtml" />
@@ -398,7 +377,7 @@
     <Content Include="Views\UnitOfMeasure\EditCard.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Folder Include="Style\tables\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
