--- a/TranslationReg/TranslationReg.csproj
+++ b/TranslationReg/TranslationReg.csproj
@@ -257,9 +257,11 @@
     <Content Include="Style\bootstrap.css" />
     <Content Include="Style\bootstrap.min.css" />
     <Content Include="Style\cards\card.css" />
+    <Content Include="Style\images\bodyBg.jpg" />
     <Content Include="Style\images\logo_tpu.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Style\material\materialButtons.css" />
     <Content Include="Style\search\search.css" />
     <Content Include="Style\Site.css" />
     <Content Include="Style\modal\deleteModal.css" />
