Начало dragDrop окна

--- a/TranslationRegistryModel/Model.csproj
+++ b/TranslationRegistryModel/Model.csproj
@@ -107,6 +107,7 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="connectionStrings.config" />
     <None Include="packages.config" />
     <EntityDeploy Include="TRegModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
