--- a/TranslationReg/packages.config
+++ b/TranslationReg/packages.config
@@ -9,6 +9,7 @@
   <package id="ImageResizer" version="4.2.0" targetFramework="net461" />
   <package id="ImageResizer.Plugins.SimpleFilters" version="4.2.0" targetFramework="net461" />
   <package id="jQuery" version="1.12.4" targetFramework="net461" />
+  <package id="jQuery.filedrop" version="1.0.1" targetFramework="net461" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
