Правки стилей, нет перезагрузки лейаута с картинкой. страничка работ (не доделана)

--- a/TranslationReg/TranslationReg.csproj
+++ b/TranslationReg/TranslationReg.csproj
@@ -380,6 +380,7 @@
     <Content Include="Views\UnitOfMeasure\Card.cshtml" />
     <Content Include="Views\UnitOfMeasure\EditCard.cshtml" />
     <Content Include="Views\Search\SearchResults.cshtml" />
+    <None Include="Views\User_Stage\MyTasks.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Style\tables\" />
