--- a/TranslationReg/Web.config
+++ b/TranslationReg/Web.config
@@ -22,7 +22,7 @@
       <forms name="cookies" timeout="2880" loginUrl="~/Account/Login" defaultUrl="~/Projects/Index" />
     </authentication>
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" />
+    <httpRuntime targetFramework="4.6.1" maxRequestLength="2097151"/>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
       <add name="ImageResizingModule" type="ImageResizer.InterceptModule" />
@@ -35,6 +35,11 @@
       <add name="ImageResizingModule" type="ImageResizer.InterceptModule" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="1073741824" />
+      </requestFiltering>
+    </security>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
