--- a/TranslationReg/TranslationReg.csproj
+++ b/TranslationReg/TranslationReg.csproj
@@ -253,15 +253,12 @@
     <Content Include="Scripts\bootstrap\respond.min.js" />
     <Content Include="Scripts\scripts.js" />
     <Content Include="Style\cards\addCard.css" />
-    <Content Include="Style\bootstrap-theme.css" />
-    <Content Include="Style\bootstrap-theme.min.css" />
-    <Content Include="Style\bootstrap.css" />
-    <Content Include="Style\bootstrap.min.css" />
+    <Content Include="Style\bootstrap\bootstrap-theme.css" />
+    <Content Include="Style\bootstrap\bootstrap-theme.min.css" />
+    <Content Include="Style\bootstrap\bootstrap.css" />
+    <Content Include="Style\bootstrap\bootstrap.min.css" />
     <Content Include="Style\cards\card.css" />
     <Content Include="Style\images\bodyBg.jpg" />
-    <Content Include="Style\images\logo_tpu.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="Style\material\materialButtons.css" />
     <Content Include="Style\modal\addModal.css" />
     <Content Include="Style\search\search.css" />
@@ -352,11 +349,10 @@
     <Content Include="Views\Documents\DocAndStages.cshtml" />
     <Content Include="Views\UnitOfMeasure\Delete.cshtml" />
     <Content Include="Views\WorkTypes\Delete.cshtml" />
-    <Content Include="Style\bootstrap-theme.css.map" />
-    <Content Include="Style\bootstrap-theme.min.css.map" />
-    <Content Include="Style\bootstrap.css.map" />
-    <Content Include="Style\bootstrap.min.css.map" />
-    <Content Include="Style\style.less" />
+    <Content Include="Style\bootstrap\bootstrap-theme.css.map" />
+    <Content Include="Style\bootstrap\bootstrap-theme.min.css.map" />
+    <Content Include="Style\bootstrap\bootstrap.css.map" />
+    <Content Include="Style\bootstrap\bootstrap.min.css.map" />
     <Content Include="Views\Projects\List.cshtml" />
     <Content Include="Views\Documents\List.cshtml" />
     <Content Include="Views\DocStages\List.cshtml" />
