Привязал ссылки и действия к иконкам на странице проекта. Правка сортировки доков. Удалена кнопка добавления стадии к проекту. потом стадии будут добавляться к докам, когда по ним завершили работы в текущей стадии. Вынес карточку дока в паршал вьюху

--- a/TranslationReg/TranslationReg.csproj
+++ b/TranslationReg/TranslationReg.csproj
@@ -386,10 +386,10 @@
     <Content Include="Views\Analytics\Table.cshtml" />
     <Content Include="Views\Projects\Project.cshtml" />
     <Content Include="Views\User_Stage\Tasks.cshtml" />
-    <Content Include="Views\DocStages\ChooseForProject.cshtml" />
     <Content Include="Views\User_Stage\ListItem.cshtml" />
     <Content Include="Views\User_Stage\ListItemEdit.cshtml" />
     <Content Include="Views\User_Stage\AddResultFile.cshtml" />
+    <Content Include="Views\Documents\Card.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
