Дедлайн стадий в проекте, подгрузка, обновление

--- a/TranslationRegistryRepository/SqlRepository.csproj
+++ b/TranslationRegistryRepository/SqlRepository.csproj
@@ -91,6 +91,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RepositoryCRUD\SqlRepository_Deadline.cs" />
     <Compile Include="RepositoryCRUD\SqlRepository_UnitsOfMeasure.cs" />
     <Compile Include="RepositoryCRUD\SqlRepository_DocFile.cs" />
     <Compile Include="RepositoryCRUD\SqlRepository_User_Stage.cs" />
