--- a/TranslationReg/Web.config
+++ b/TranslationReg/Web.config
@@ -10,6 +10,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="resizer" type="ImageResizer.ResizerSection,ImageResizer" requirePermission="false" />
   </configSections>
+  <!-- здесь ссылка на конфиг со строкой подключения -->
   <connectionStrings configSource="connectionStrings.config" />
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
