--- a/TranslationRegistryModel/App.config
+++ b/TranslationRegistryModel/App.config
@@ -14,5 +14,6 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <!-- здесь ссылка на конфиг со строкой подключения -->
   <connectionStrings configSource="connectionStrings.config"/>
 </configuration>
